1) displayInLine: to use "regular" font-size 2) Dialog title color made contrast 3) RTE background color fixed for dark (inverted) schemes
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@12193 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -87,8 +87,8 @@ img.fade {
   display: inline;
   float: none;
 }
-.displayInline { overflow:hidden; width: 100%; height: 1em; line-height: 0.95em; }
-.displayInline div { margin:0 !important; }
+.displayInline { overflow:hidden; width: 100%; height: 1em; line-height: 0.92em; }
+.displayInline div, .displayInline span { font-size:1em !important; font-weight:normal !important; margin:0 !important; }
 
 .mItems {
   text-align:center;
@@ -669,9 +669,9 @@ span.fileMenuTitle  {font-weight:bold; font-size:16px; color:#00309C;vertical-al
 
 /* To display window titles on a dashboard */
 span.dashboardBlockTitle {font-weight:bold; font-size:12px; color:#00309C;}
-.panel_block .dashboardBlockTitle { font-size: 16px;  color: #edf1fa; margin-right:12px; }
+.panel_block .dashboardBlockTitle { font-size: 16px;  color: &[Label];; margin-right:12px; }
 span.dashboardGrayedTitle {font-size:12px; color:#10106D;}
-.panel_block span.dashboardGrayedTitle { color: #fff; margin-left: 7px; font-size: 16px; }
+.panel_block span.dashboardGrayedTitle { color: &[Label];; margin-left: 7px; font-size: 16px; }
 
 /* to display large image in resource list */
 /*td.largeImage {padding-top:20px; padding-bottom:20px; padding-left:20px; padding-right:20px; border:solid #808080 1px; background-color: #ffffff; color: #000000}*/
@@ -1408,7 +1408,7 @@ table.printFB {
 
 #register .input { border: 1px solid &[SecondaryColorA_3];; color: &[SecondaryColorB_3];; margin-right: 1em;}
 
-.rte { margin-bottom: 7px; background-color: rgba(255, 255, 255, 0.9); border: 1px solid &[PrimaryColor_1];; padding:0; width: 100%; height: 100px;  }
+.rte { margin-bottom: 7px; background-color: rgba(255, 255, 255, 0.1); border: 1px solid &[PrimaryColor_1];; padding:0; width: 100%; height: 100px;  }
 
 /* like menu_Options in iphone.css */
 #browser_dlg { z-index: 1000; top: 0px; position: absolute; width: 320px; padding: 0px; visibility: hidden; }
